--- a/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級3層零式.md
+++ b/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級3層零式.md
@@ -3,15 +3,25 @@
 <span style="color: #FF0000;">2026/1/9/00:45<br></span>
 ステージ分断あたりまで<br>
 
+<span style="color: #FF0000;">2026/1/9/10:10<br></span>
+一通り完成<br>
+
 ## レイアウト
 ```
 ~Lv2~{"Name":"Hvy3S_ザ・タイラント_ウェポンジェネレート・バスター_斧","Group":"[7.4]アルカディアヘビー級3層零式","ZoneLockH":[1325],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Duration":10.0,"Match":"(14305>46114)"}],"ElementsL":[{"Name":"タンク","type":1,"radius":6.0,"color":4278190335,"Filled":false,"fillIntensity":0.3,"thicc":5.0,"refActorPlaceholder":["<t1>"],"refActorComparisonType":5,"includeRotation":true,"FaceMe":true},{"Name":"ヒーラーDPS","type":1,"radius":5.0,"color":4278190335,"fillIntensity":0.3,"refActorPlaceholder":["<h1>","<h2>","<d1>","<d2>","<d3>","<d4>"],"refActorComparisonType":5,"includeRotation":true,"FaceMe":true}]}
 ~Lv2~{"Name":"Hvy3S_ザ・タイラント_ウェポンジェネレート・バスター_鎌","Group":"[7.4]アルカディアヘビー級3層零式","ZoneLockH":[1325],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Duration":10.0,"Match":"(14305>46115)"}],"ElementsL":[{"Name":"T1","type":4,"radius":50.0,"coneAngleMin":-45,"coneAngleMax":45,"color":4278190335,"fillIntensity":0.3,"thicc":3.0,"refActorNPCNameID":14305,"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"onlyTargetable":true,"onlyVisible":true,"FaceMe":true,"DistanceMax":13.2,"faceplayer":"<t1>","FillStep":4.0},{"Name":"T2","type":4,"radius":50.0,"coneAngleMin":-45,"coneAngleMax":45,"color":4278190335,"fillIntensity":0.3,"thicc":3.0,"refActorNPCNameID":14305,"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"onlyTargetable":true,"onlyVisible":true,"FaceMe":true,"DistanceMax":13.2,"faceplayer":"<t2>","FillStep":4.0},{"Name":"頭割り","type":4,"radius":50.0,"coneAngleMin":-22,"coneAngleMax":22,"color":4278190335,"Filled":false,"fillIntensity":0.3,"thicc":5.0,"refActorNPCNameID":14305,"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"onlyTargetable":true,"onlyVisible":true,"FaceMe":true,"DistanceMax":13.2,"faceplayer":"<h1>","FillStep":4.0}]}
 ~Lv2~{"Name":"Hvy3S_ザ・タイラント_ウェポンアサルト","Group":"[7.4]アルカディアヘビー級3層零式","ZoneLockH":[1325],"ElementsL":[{"Name":"剣1","type":3,"refY":50.0,"offY":-50.0,"radius":5.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14305,"refActorRequireCast":true,"refActorCastId":[46106],"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0},{"Name":"剣2","type":3,"refY":50.0,"offY":-50.0,"radius":5.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14305,"refActorRequireCast":true,"refActorCastId":[46106],"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":1.5707964,"FillStep":2.0},{"Name":"斧","type":1,"radius":8.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14305,"refActorRequireCast":true,"refActorCastId":[46104],"refActorComparisonType":6,"includeRotation":true,"FaceMe":true},{"Name":"鎌","type":1,"radius":5.0,"Donut":40.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14305,"refActorRequireCast":true,"refActorCastId":[46105],"refActorComparisonType":6,"includeRotation":true,"FaceMe":true}]}
 ~Lv2~{"Name":"Hvy3S_ザ・タイラント_ダンス・オブ・ドミネーション","Group":"[7.4]アルカディアヘビー級3層零式","ZoneLockH":[1325],"ElementsL":[{"Name":"前方直線","type":3,"refY":25.0,"offY":-25.0,"radius":5.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14305,"refActorRequireCast":true,"refActorCastId":[47036],"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0}]}
-~Lv2~{"Name":"Hvy3S_ザ・タイラント_オービタルライン","Group":"[7.4]アルカディアヘビー級3層零式","ZoneLockH":[1325],"ElementsL":[{"Name":"前方直線1","type":3,"refY":45.0,"offY":5.0,"radius":5.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14305,"refActorRequireCast":true,"refActorCastId":[46131],"refActorUseCastTime":true,"refActorCastTimeMin":3.0,"refActorCastTimeMax":6.0,"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0,"Conditional":true,"ConditionalInvert":true},{"Name":"前方直線2","type":3,"refY":45.0,"offY":5.0,"radius":5.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14305,"refActorRequireCast":true,"refActorCastId":[46131],"refActorCastTimeMin":3.0,"refActorCastTimeMax":6.0,"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0}]}
+~Lv2~{"Name":"Hvy3S_ザ・タイラント_オービタルライン1","Group":"[7.4]アルカディアヘビー級3層零式","ZoneLockH":[1325],"Freezing":true,"FreezeFor":3.0,"IntervalBetweenFreezes":20.0,"ElementsL":[{"Name":"前方直線1","type":3,"refY":45.0,"offY":5.0,"radius":5.0,"color":4294903808,"fillIntensity":0.3,"refActorNPCNameID":14305,"refActorRequireCast":true,"refActorCastId":[46131],"refActorUseCastTime":true,"refActorCastTimeMax":0.1,"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0}]}
+~Lv2~{"Name":"Hvy3S_ザ・タイラント_オービタルライン2","Group":"[7.4]アルカディアヘビー級3層零式","ZoneLockH":[1325],"ElementsL":[{"Name":"前方直線","type":3,"refY":45.0,"offY":5.0,"radius":5.0,"color":4294903808,"fillIntensity":0.3,"refActorNPCNameID":14305,"refActorRequireCast":true,"refActorCastId":[46131],"refActorUseCastTime":true,"refActorCastTimeMin":3.0,"refActorCastTimeMax":6.0,"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0}]}
+~Lv2~{"Name":"Hvy3S_ザ・タイラント_ファイア・アンド・テイル","Group":"[7.4]アルカディアヘビー級3層零式","ZoneLockH":[1325],"ElementsL":[{"Name":"扇_前","type":4,"radius":30.0,"coneAngleMin":-45,"coneAngleMax":45,"color":4278190335,"fillIntensity":0.3,"thicc":3.0,"refActorNPCNameID":14305,"refActorRequireCast":true,"refActorCastId":[46128],"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"DistanceMax":13.2,"FillStep":4.0},{"Name":"扇_後","type":4,"radius":30.0,"coneAngleMin":-45,"coneAngleMax":45,"color":4278190335,"fillIntensity":0.3,"thicc":3.0,"refActorNPCNameID":14305,"refActorRequireCast":true,"refActorCastId":[46128],"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"AdditionalRotation":3.1415927,"DistanceMax":13.2,"FillStep":4.0}]}
 ~Lv2~{"Name":"Hvy3S_ザ・タイラント_トライスターズ・タイラントフォール","Group":"[7.4]アルカディアヘビー級3層零式","ZoneLockH":[1325],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Duration":12.0,"Match":"(14305>46140)"}],"ElementsL":[{"Name":"コメット_判定","type":1,"radius":0.0,"color":4278255103,"fillIntensity":0.3,"refActorNPCNameID":14306,"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"onlyUnTargetable":true,"onlyVisible":true,"FaceMe":true},{"Name":"コメット_中心","type":1,"radius":0.2,"color":4278190335,"fillIntensity":1.0,"refActorNPCNameID":14306,"refActorComparisonType":6,"includeRotation":true,"onlyUnTargetable":true,"onlyVisible":true,"FaceMe":true},{"Name":"テザー_黒縁","type":1,"radius":0.0,"color":4278190080,"fillIntensity":0.5,"thicc":10.0,"refActorNPCNameID":14305,"refActorComparisonType":6,"onlyTargetable":true,"onlyVisible":true,"tether":true},{"Name":"テザー","type":1,"radius":0.0,"color":4294967295,"fillIntensity":0.5,"thicc":5.0,"refActorNPCNameID":14305,"refActorComparisonType":6,"onlyTargetable":true,"onlyVisible":true,"tether":true}]}
 ~Lv2~{"Name":"Hvy3S_ザ・タイラント_チャンピオンズ・メテオ","Group":"[7.4]アルカディアヘビー級3層零式","ZoneLockH":[1325],"ElementsL":[{"Name":"サークル1","type":1,"radius":6.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14305,"refActorRequireCast":true,"refActorCastId":[46145],"refActorUseCastTime":true,"refActorCastTimeMin":2.0,"refActorCastTimeMax":6.0,"refActorComparisonType":6,"includeRotation":true,"FaceMe":true,"Conditional":true,"ConditionalInvert":true},{"Name":"サークル","type":1,"radius":6.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14305,"refActorRequireCast":true,"refActorCastId":[46145],"refActorComparisonType":6,"includeRotation":true,"FaceMe":true}]}
+~Lv2~{"Name":"Hvy3S_ザ・タイラント_爆発","Group":"[7.4]アルカディアヘビー級3層零式","ZoneLockH":[1325],"MaxDistance":5.0,"UseDistanceLimit":true,"DistanceLimitType":1,"ElementsL":[{"Name":"ノックバック","type":1,"radius":0.0,"color":4278255462,"Filled":false,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":3.0,"overlayFScale":3.0,"thicc":5.0,"refActorNPCNameID":14305,"refActorRequireCast":true,"refActorCastId":[46148],"refActorComparisonType":6,"tether":true,"ExtraTetherLength":25.0,"LineEndB":1}]}
+~Lv2~{"Name":"Hvy3S_ザ・タイラント_アルカディア・クラッシュ1","Group":"[7.4]アルカディアヘビー級3層零式","ZoneLockH":[1325],"ElementsL":[{"Name":"トリガー","type":3,"refY":26.0,"offY":6.0,"radius":20.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14305,"refActorRequireCast":true,"refActorCastId":[46158,46154,46160,46156],"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0,"Conditional":true,"Nodraw":true},{"Name":"左前","type":4,"offX":-11.0,"offY":16.0,"radius":4.0,"coneAngleMin":-180,"coneAngleMax":146,"color":4278190335,"fillIntensity":1.0,"thicc":3.0,"refActorNPCNameID":14305,"refActorComparisonType":6,"includeRotation":true,"onlyTargetable":true,"DistanceMax":13.2,"FillStep":4.0},{"Name":"右前","type":4,"offX":11.0,"offY":16.0,"radius":4.0,"coneAngleMin":-146,"coneAngleMax":180,"color":4278190335,"fillIntensity":1.0,"thicc":3.0,"refActorNPCNameID":14305,"refActorComparisonType":6,"includeRotation":true,"onlyTargetable":true,"DistanceMax":13.2,"FillStep":4.0},{"Name":"左後","type":4,"offX":-11.0,"offY":-16.0,"radius":4.0,"coneAngleMin":-251,"coneAngleMax":71,"color":4278190335,"fillIntensity":1.0,"thicc":3.0,"refActorNPCNameID":14305,"refActorComparisonType":6,"includeRotation":true,"onlyTargetable":true,"DistanceMax":13.2,"FillStep":4.0},{"Name":"右後","type":4,"offX":11.0,"offY":-16.0,"radius":4.0,"coneAngleMin":-71,"coneAngleMax":251,"color":4278190335,"fillIntensity":1.0,"thicc":3.0,"refActorNPCNameID":14305,"refActorComparisonType":6,"includeRotation":true,"onlyTargetable":true,"DistanceMax":13.2,"FillStep":4.0}]}
+~Lv2~{"Name":"Hvy3S_ザ・タイラント_アルカディア・クラッシュ2","Group":"[7.4]アルカディアヘビー級3層零式","ZoneLockH":[1325],"ElementsL":[{"Name":"トリガー","type":3,"refY":26.0,"offY":6.0,"radius":20.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14305,"refActorRequireCast":true,"refActorCastId":[46158,46154,46160,46156],"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0,"Conditional":true,"ConditionalInvert":true,"Nodraw":true},{"Name":"前方直線","type":3,"refY":35.0,"offY":-5.0,"radius":20.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14305,"refActorRequireCast":true,"refActorCastId":[46159,46155,46161,46157],"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0}]}
+~Lv2~{"Name":"Hvy3S_ザ・タイラント_ヒュージメテオ","Group":"[7.4]アルカディアヘビー級3層零式","ZoneLockH":[1325],"ElementsL":[{"Name":"サークル","type":1,"radius":20.0,"color":4278190335,"fillIntensity":0.3,"castAnimation":3,"refActorNPCNameID":14305,"refActorRequireCast":true,"refActorCastId":[46163],"refActorComparisonType":6,"includeRotation":true,"FaceMe":true}]}
+~Lv2~{"Name":"Hvy3S_ザ・タイラント_ツーウェイ・スピンファイア","Group":"[7.4]アルカディアヘビー級3層零式","ZoneLockH":[1325],"ElementsL":[{"Name":"H1","type":3,"refY":50.0,"radius":3.0,"color":4278190335,"Filled":false,"fillIntensity":0.3,"thicc":5.0,"refActorNPCNameID":14305,"refActorRequireCast":true,"refActorCastId":[47037],"refActorComparisonType":6,"includeRotation":true,"FaceMe":true,"faceplayer":"<h1>","FillStep":2.0},{"Name":"H2","type":3,"refY":50.0,"radius":3.0,"color":4278190335,"Filled":false,"fillIntensity":0.3,"thicc":5.0,"refActorNPCNameID":14305,"refActorRequireCast":true,"refActorCastId":[47037],"refActorComparisonType":6,"includeRotation":true,"FaceMe":true,"faceplayer":"<h2>","FillStep":2.0}]}
 ```
 
 ## スクリプト
