--- a/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級2層零式.md
+++ b/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級2層零式.md
@@ -21,14 +21,23 @@ splatoonのgithubの翻訳＋α<br>
 ・Hvy2S_ディープブルー_シック・テイクオフ2回目_頭割<br>
 追加<br>
 
+<span style="color: #FF0000;">2026/1/10/14:20<br></span>
+全体的な追加・修正・変更<br>
+数が多いので詳細は省略します<br>
+
 ## レイアウト
 ```
-~Lv2~{"Name":"Hvy2S_ディープブルー_シック・テイクオフ1回目_散開","InternationalName":{"En":"M10S Sickest Take Off - Spread (Phase 1)","Jp":"Hvy2S_ディープブルー_シック・テイクオフ1回目_散開","De":"M10S Sickest Take Off - Spread (Phase 1)","Fr":"M10S Sickest Take Off - Spread (Phase 1)"},"Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"DCond":5,"UseTriggers":true,"MinDistance":0.1,"MaxDistance":30.0,"UseDistanceLimit":true,"DistanceLimitType":1,"Triggers":[{"Type":2,"Duration":16.0,"Match":"vfx/common/eff/m0982stlp2c0c.avfx","FireOnce":true}],"ElementsL":[{"Name":"サークル","type":1,"radius":5.0,"color":4278190335,"fillIntensity":0.3,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":2.0,"thicc":3.0,"refActorComparisonType":1}]}
-~Lv2~{"Name":"Hvy2S_ディープブルー_シック・テイクオフ1回目_頭割","InternationalName":{"En":"M10S Sickest Take Off - Stack (Phase 1)","Jp":"Hvy2S_ディープブルー_シック・テイクオフ1回目_頭割","De":"M10S Sickest Take Off - Stack (Phase 1)","Fr":"M10S Sickest Take Off - Stack (Phase 1)"},"Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Duration":16.0,"Match":"vfx/common/eff/m0982stlp1c0c.avfx","FireOnce":true}],"ElementsL":[{"Name":"サークル","type":1,"radius":5.0,"Filled":false,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":2.0,"thicc":5.0,"overlayTextIntl":{"En":"Stack","Jp":"頭割"},"refActorPlaceholder":["<h1>","<h2>"],"refActorComparisonType":5}]}
+~Lv2~{"Name":"Hvy2S_レッドホット_フレイムフローター_テキスト","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"ElementsL":[{"Name":"1","type":1,"radius":0.0,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4290903808,"overlayVOffset":2.0,"overlayFScale":2.0,"thicc":0.0,"overlayText":"1","refActorRequireBuff":true,"refActorBuffId":[3004],"refActorComparisonType":1,"refActorType":1},{"Name":"2","type":1,"radius":0.0,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4294901986,"overlayVOffset":2.0,"overlayFScale":2.0,"thicc":0.0,"overlayText":"2","refActorRequireBuff":true,"refActorBuffId":[3005],"refActorComparisonType":1,"refActorType":1},{"Name":"3","type":1,"radius":0.0,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4290903808,"overlayVOffset":2.0,"overlayFScale":2.0,"thicc":0.0,"overlayText":"3","refActorRequireBuff":true,"refActorBuffId":[3006],"refActorComparisonType":1,"refActorType":1},{"Name":"4","type":1,"radius":0.0,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4294901986,"overlayVOffset":2.0,"overlayFScale":2.0,"thicc":0.0,"overlayText":"4","refActorRequireBuff":true,"refActorBuffId":[3451],"refActorComparisonType":1,"refActorType":1}]}
+~Lv2~{"Name":"Hvy2S_レッドホット_フレイムフローター_テザー目安","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"ElementsL":[{"Name":"トリガー_ファーストターゲット","type":1,"radius":0.0,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4290903808,"overlayVOffset":2.0,"overlayFScale":2.0,"thicc":0.0,"overlayText":"1","refActorRequireBuff":true,"refActorBuffId":[3004],"refActorComparisonType":1,"refActorType":1,"Conditional":true,"Nodraw":true},{"Name":"黒腺","type":1,"radius":15.0,"color":4278190080,"Filled":false,"fillIntensity":0.3,"thicc":10.0,"refActorNPCNameID":14370,"refActorComparisonType":6,"includeRotation":true,"onlyTargetable":true,"onlyVisible":true,"FaceMe":true},{"Name":"白腺","type":1,"radius":15.0,"color":4294967295,"Filled":false,"fillIntensity":0.3,"thicc":5.0,"refActorNPCNameID":14370,"refActorComparisonType":6,"includeRotation":true,"onlyTargetable":true,"onlyVisible":true,"FaceMe":true},{"Name":"トリガー_セカンドターゲット","type":1,"radius":0.0,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4290903808,"overlayVOffset":2.0,"overlayFScale":2.0,"thicc":0.0,"overlayText":"1","refActorRequireBuff":true,"refActorBuffId":[3005],"refActorComparisonType":1,"refActorType":1,"Conditional":true,"ConditionalReset":true,"Nodraw":true},{"Name":"黒腺","type":1,"radius":15.0,"color":4278190080,"Filled":false,"fillIntensity":0.3,"thicc":10.0,"refActorRequireBuff":true,"refActorBuffId":[3004],"refActorComparisonType":1,"includeRotation":true,"onlyTargetable":true,"onlyVisible":true,"FaceMe":true},{"Name":"白腺","type":1,"radius":15.0,"color":4294967295,"Filled":false,"fillIntensity":0.3,"thicc":5.0,"refActorRequireBuff":true,"refActorBuffId":[3004],"refActorComparisonType":1,"includeRotation":true,"onlyTargetable":true,"onlyVisible":true,"FaceMe":true},{"Name":"トリガー_サードターゲット","type":1,"radius":0.0,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4290903808,"overlayVOffset":2.0,"overlayFScale":2.0,"thicc":0.0,"overlayText":"1","refActorRequireBuff":true,"refActorBuffId":[3006],"refActorComparisonType":1,"refActorType":1,"Conditional":true,"ConditionalReset":true,"Nodraw":true},{"Name":"黒腺","type":1,"radius":15.0,"color":4278190080,"Filled":false,"fillIntensity":0.3,"thicc":10.0,"refActorRequireBuff":true,"refActorBuffId":[3005],"refActorComparisonType":1,"includeRotation":true,"onlyTargetable":true,"onlyVisible":true,"FaceMe":true},{"Name":"白腺","type":1,"radius":15.0,"color":4294967295,"Filled":false,"fillIntensity":0.3,"thicc":5.0,"refActorRequireBuff":true,"refActorBuffId":[3005],"refActorComparisonType":1,"includeRotation":true,"onlyTargetable":true,"onlyVisible":true,"FaceMe":true},{"Name":"トリガー_フォースターゲット","type":1,"radius":0.0,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4290903808,"overlayVOffset":2.0,"overlayFScale":2.0,"thicc":0.0,"overlayText":"1","refActorRequireBuff":true,"refActorBuffId":[3451],"refActorComparisonType":1,"refActorType":1,"Conditional":true,"ConditionalReset":true,"Nodraw":true},{"Name":"黒腺","type":1,"radius":15.0,"color":4278190080,"Filled":false,"fillIntensity":0.3,"thicc":10.0,"refActorRequireBuff":true,"refActorBuffId":[3006],"refActorComparisonType":1,"includeRotation":true,"onlyTargetable":true,"onlyVisible":true,"FaceMe":true},{"Name":"白腺","type":1,"radius":15.0,"color":4294967295,"Filled":false,"fillIntensity":0.3,"thicc":5.0,"refActorRequireBuff":true,"refActorBuffId":[3006],"refActorComparisonType":1,"includeRotation":true,"onlyTargetable":true,"onlyVisible":true,"FaceMe":true}]}
+~Lv2~{"Name":"Hvy2S_ディープブルー_シック・テイクオフ1回目_散開","InternationalName":{"En":"M10S Sickest Take Off - Spread (Phase 1)","Jp":"Hvy2S_ディープブルー_シック・テイクオフ1回目_散開","De":"M10S Sickest Take Off - Spread (Phase 1)","Fr":"M10S Sickest Take Off - Spread (Phase 1)"},"Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"DCond":5,"UseTriggers":true,"MinDistance":0.1,"MaxDistance":30.0,"UseDistanceLimit":true,"DistanceLimitType":1,"Triggers":[{"Type":2,"Duration":10.0,"Match":"vfx/common/eff/m0982stlp2c0c.avfx","MatchDelay":6.0,"FireOnce":true}],"ElementsL":[{"Name":"サークル","type":1,"radius":5.0,"color":4278190335,"fillIntensity":0.3,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":2.0,"thicc":3.0,"refActorComparisonType":1}]}
+~Lv2~{"Name":"Hvy2S_ディープブルー_シック・テイクオフ1回目_頭割","InternationalName":{"En":"M10S Sickest Take Off - Stack (Phase 1)","Jp":"Hvy2S_ディープブルー_シック・テイクオフ1回目_頭割","De":"M10S Sickest Take Off - Stack (Phase 1)","Fr":"M10S Sickest Take Off - Stack (Phase 1)"},"Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Duration":10.0,"Match":"vfx/common/eff/m0982stlp1c0c.avfx","MatchDelay":6.0,"FireOnce":true}],"ElementsL":[{"Name":"サークル","type":1,"radius":5.0,"Filled":false,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":2.0,"thicc":5.0,"overlayTextIntl":{"En":"Stack","Jp":"頭割"},"refActorPlaceholder":["<h1>","<h2>"],"refActorComparisonType":5}]}
 ~Lv2~{"Name":"Hvy2S_ディープブルー_シック・テイクオフ2回目_散開","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"DCond":5,"UseTriggers":true,"MinDistance":0.1,"MaxDistance":100.0,"UseDistanceLimit":true,"DistanceLimitType":1,"Triggers":[{"Type":2,"Duration":6.0,"Match":"vfx/common/eff/m0982stlp4c0c.avfx","MatchDelay":10.0,"FireOnce":true}],"ElementsL":[{"Name":"サークル","type":1,"radius":5.0,"color":4278190335,"fillIntensity":0.3,"refActorRequireBuff":true,"refActorBuffId":[4975],"refActorComparisonType":1,"includeRotation":true,"FaceMe":true}]}
 ~Lv2~{"Name":"Hvy2S_ディープブルー_シック・テイクオフ2回目_頭割","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Duration":6.0,"Match":"vfx/common/eff/m0982stlp3c0c.avfx","MatchDelay":10.0,"FireOnce":true}],"ElementsL":[{"Name":"サークル","type":1,"radius":5.0,"color":4278190335,"Filled":false,"fillIntensity":0.3,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":2.0,"thicc":5.0,"overlayTextIntl":{"Jp":"頭割り"},"refActorPlaceholder":["<h1>","<h2>"],"refActorRequireBuff":true,"refActorBuffId":[4975],"refActorComparisonType":5,"includeRotation":true,"FaceMe":true}]}
-~Lv2~{"Name":"Hvy2S_ディープブルー_ダブルアリウープ1","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"ConditionalAnd":true,"ElementsL":[{"Name":"cond - no red hot","type":1,"refActorNPCNameID":14370,"refActorComparisonType":6,"onlyTargetable":true,"Conditional":true,"ConditionalInvert":true,"Nodraw":true},{"Name":"Cond - no status","type":1,"refActorRequireBuff":true,"refActorBuffId":[4974,4975],"refActorType":1,"Conditional":true,"ConditionalInvert":true,"Nodraw":true},{"Name":"pc","type":1,"refActorName":"*","ObjectKinds":[1],"IsCapturing":true,"Nodraw":true},{"Name":"Reverse","type":4,"radius":40.0,"coneAngleMin":-15,"coneAngleMax":15,"color":3355489279,"fillIntensity":0.237,"refActorNPCNameID":14369,"refActorRequireCast":true,"refActorCastId":[46560],"refActorCastTimeMax":10.0,"refActorComparisonType":6,"includeRotation":true,"FaceMe":true,"faceplayer":"<element:pc>"},{"Name":"Double","type":4,"radius":40.0,"coneAngleMin":-15,"coneAngleMax":15,"color":3355489279,"fillIntensity":0.237,"refActorNPCNameID":14369,"refActorRequireCast":true,"refActorCastId":[46557],"refActorCastTimeMax":10.0,"refActorComparisonType":6,"includeRotation":true,"FaceMe":true,"faceplayer":"<element:pc>"}]}
-~Lv2~{"Name":"Hvy2S_ディープブルー_ダブルアリウープ2","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"ConditionalAnd":true,"Freezing":true,"FreezeFor":4.0,"ElementsL":[{"Name":"cond - no red hot","type":1,"refActorNPCNameID":14370,"refActorComparisonType":6,"onlyTargetable":true,"Conditional":true,"ConditionalInvert":true,"Nodraw":true},{"Name":"Cond - no status","type":1,"refActorRequireBuff":true,"refActorBuffId":[4974,4975],"refActorType":1,"Conditional":true,"ConditionalInvert":true,"Nodraw":true},{"Name":"pc","type":1,"refActorName":"*","ObjectKinds":[1],"IsCapturing":true,"Nodraw":true},{"Name":"Double","type":4,"radius":40.0,"coneAngleMin":-15,"coneAngleMax":15,"fillIntensity":0.488,"refActorNPCNameID":14369,"refActorRequireCast":true,"refActorCastId":[46557],"refActorUseCastTime":true,"refActorCastTimeMin":4.7,"refActorCastTimeMax":8.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"FaceMe":true,"faceplayer":"<element:pc>"}]}
+~Lv2~{"Name":"Hvy2S_ディープブルー_ダブル/リバースアリウープ1","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"ConditionalAnd":true,"ElementsL":[{"Name":"トリガー1","type":1,"Enabled":false,"refActorNPCNameID":14370,"refActorComparisonType":6,"onlyTargetable":true,"Conditional":true,"ConditionalInvert":true,"Nodraw":true},{"Name":"トリガー2","type":1,"refActorRequireBuff":true,"refActorBuffId":[4974,4975],"refActorType":1,"Conditional":true,"ConditionalInvert":true,"Nodraw":true},{"Name":"pc","type":1,"refActorName":"*","ObjectKinds":[1],"IsCapturing":true,"Nodraw":true},{"Name":"Reverse","type":4,"radius":50.0,"coneAngleMin":-15,"coneAngleMax":15,"color":3355489279,"fillIntensity":0.3,"refActorNPCNameID":14369,"refActorRequireCast":true,"refActorCastId":[46560],"refActorCastTimeMax":10.0,"refActorComparisonType":6,"includeRotation":true,"FaceMe":true,"faceplayer":"<element:pc>"},{"Name":"Double","type":4,"radius":40.0,"coneAngleMin":-15,"coneAngleMax":15,"color":3355489279,"fillIntensity":0.237,"refActorNPCNameID":14369,"refActorRequireCast":true,"refActorCastId":[46557],"refActorCastTimeMax":10.0,"refActorComparisonType":6,"includeRotation":true,"FaceMe":true,"faceplayer":"<element:pc>"}]}
+~Lv2~{"Name":"Hvy2S_ディープブルー_ダブルアリウープ2","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"ConditionalAnd":true,"Freezing":true,"FreezeFor":4.0,"ElementsL":[{"Name":"トリガー1","type":1,"Enabled":false,"refActorNPCNameID":14370,"refActorComparisonType":6,"onlyTargetable":true,"Conditional":true,"ConditionalInvert":true,"Nodraw":true},{"Name":"トリガー2","type":1,"refActorRequireBuff":true,"refActorBuffId":[4974,4975],"refActorType":1,"Conditional":true,"ConditionalInvert":true,"Nodraw":true},{"Name":"pc","type":1,"refActorName":"*","ObjectKinds":[1],"IsCapturing":true,"Nodraw":true},{"Name":"扇","type":4,"radius":40.0,"coneAngleMin":-15,"coneAngleMax":15,"fillIntensity":0.488,"refActorNPCNameID":14369,"refActorRequireCast":true,"refActorCastId":[46557],"refActorUseCastTime":true,"refActorCastTimeMin":4.7,"refActorCastTimeMax":8.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"FaceMe":true,"faceplayer":"<element:pc>"}]}
+~Lv2~{"Name":"Hvy2S_ディープブルー_リバースアリウープ2","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"DCond":5,"UseTriggers":true,"Freezing":true,"FreezeFor":4.0,"Triggers":[{"Type":2,"Duration":1.0,"MatchIntl":{"Jp":"(14369>46560)"},"MatchDelay":5.0}],"ElementsL":[{"Name":"トリガー","type":1,"refActorRequireBuff":true,"refActorBuffId":[4974,4975],"refActorType":1,"Conditional":true,"ConditionalInvert":true,"Nodraw":true},{"Name":"扇1","type":4,"Enabled":false,"radius":50.0,"coneAngleMin":-10,"coneAngleMax":10,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14369,"refActorCastTimeMin":4.9,"refActorCastTimeMax":5.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"onlyTargetable":true,"AdditionalRotation":0.36651915,"faceplayer":"<element:ハイドロスネーキング>"},{"Name":"扇2","type":4,"Enabled":false,"radius":50.0,"coneAngleMin":-10,"coneAngleMax":10,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14369,"refActorCastTimeMin":4.9,"refActorCastTimeMax":5.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"onlyTargetable":true,"AdditionalRotation":1.1519173,"faceplayer":"<element:ハイドロスネーキング>"},{"Name":"扇3","type":4,"Enabled":false,"radius":50.0,"coneAngleMin":-12,"coneAngleMax":12,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14369,"refActorCastTimeMin":4.9,"refActorCastTimeMax":5.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"onlyTargetable":true,"AdditionalRotation":1.9373155,"faceplayer":"<element:ハイドロスネーキング>"},{"Name":"扇4","type":4,"Enabled":false,"radius":50.0,"coneAngleMin":-12,"coneAngleMax":12,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14369,"refActorCastTimeMin":4.9,"refActorCastTimeMax":5.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"onlyTargetable":true,"AdditionalRotation":2.7227137,"faceplayer":"<element:ハイドロスネーキング>"},{"Name":"扇5","type":4,"Enabled":false,"radius":50.0,"coneAngleMin":-12,"coneAngleMax":12,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14369,"refActorCastTimeMin":4.9,"refActorCastTimeMax":5.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"onlyTargetable":true,"AdditionalRotation":3.5430183,"faceplayer":"<element:ハイドロスネーキング>"},{"Name":"扇6","type":4,"Enabled":false,"radius":50.0,"coneAngleMin":-10,"coneAngleMax":10,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14369,"refActorCastTimeMin":4.9,"refActorCastTimeMax":5.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"onlyTargetable":true,"AdditionalRotation":4.37205,"faceplayer":"<element:ハイドロスネーキング>"},{"Name":"扇7","type":4,"Enabled":false,"radius":50.0,"coneAngleMin":-10,"coneAngleMax":10,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14369,"refActorCastTimeMin":4.9,"refActorCastTimeMax":5.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"onlyTargetable":true,"AdditionalRotation":5.131268,"faceplayer":"<element:ハイドロスネーキング>"},{"Name":"扇8","type":4,"Enabled":false,"radius":50.0,"coneAngleMin":-10,"coneAngleMax":10,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14369,"refActorCastTimeMin":4.9,"refActorCastTimeMax":5.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"onlyTargetable":true,"AdditionalRotation":5.8817596,"faceplayer":"<element:ハイドロスネーキング>"},{"Name":"pc","type":1,"refActorName":"*","ObjectKinds":[1],"IsCapturing":true,"Nodraw":true},{"Name":"扇1","type":4,"radius":50.0,"coneAngleMin":-10,"coneAngleMax":10,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14369,"refActorCastTimeMin":4.9,"refActorCastTimeMax":5.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"onlyTargetable":true,"AdditionalRotation":0.38397244,"FaceMe":true,"faceplayer":"<element:pc>"},{"Name":"扇2","type":4,"radius":50.0,"coneAngleMin":-10,"coneAngleMax":10,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14369,"refActorCastTimeMin":4.9,"refActorCastTimeMax":5.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"onlyTargetable":true,"AdditionalRotation":5.899213,"FaceMe":true,"faceplayer":"<element:pc>"}]}
+~Lv2~{"Name":"Hvy2S_ディープブルー_ダブル/リバースアリウープ1_スネーキング","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"ElementsL":[{"Name":"トリガー1","type":1,"Enabled":false,"refActorNPCNameID":14370,"refActorComparisonType":6,"onlyTargetable":true,"Conditional":true,"Nodraw":true},{"Name":"ハイドロスネーキング","type":1,"refActorName":"*","refActorRequireBuff":true,"refActorBuffId":[4975],"ObjectKinds":[1],"IsCapturing":true,"Nodraw":true},{"Name":"扇","type":4,"radius":30.0,"coneAngleMin":-15,"coneAngleMax":15,"color":3355489279,"fillIntensity":0.3,"refActorNPCNameID":14369,"refActorRequireCast":true,"refActorCastId":[46557,46560],"refActorCastTimeMax":10.0,"refActorComparisonType":6,"includeRotation":true,"FaceMe":true,"faceplayer":"<element:ハイドロスネーキング>"}]}
+~Lv2~{"Name":"Hvy2S_ディープブルー_リバースアリウープ2_スネーキング","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"DCond":5,"UseTriggers":true,"Freezing":true,"FreezeFor":3.0,"Triggers":[{"Type":2,"Duration":1.0,"MatchIntl":{"Jp":"#46561 リバースアリウープ cast on 9020/ディープブルー effect on"}}],"ElementsL":[{"Name":"ハイドロスネーキング","type":1,"refActorName":"*","refActorRequireBuff":true,"refActorBuffId":[4975],"ObjectKinds":[1],"IsCapturing":true,"Nodraw":true},{"Name":"扇1","type":4,"radius":50.0,"coneAngleMin":-10,"coneAngleMax":10,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14369,"refActorCastTimeMin":4.9,"refActorCastTimeMax":5.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"onlyTargetable":true,"AdditionalRotation":0.38397244,"FaceMe":true,"faceplayer":"<element:ハイドロスネーキング>"},{"Name":"扇2","type":4,"radius":50.0,"coneAngleMin":-10,"coneAngleMax":10,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14369,"refActorCastTimeMin":4.9,"refActorCastTimeMax":5.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"onlyTargetable":true,"AdditionalRotation":5.899213,"FaceMe":true,"faceplayer":"<element:ハイドロスネーキング>"}]}
 ~Lv2~{"Name":"Hvy2S_ディープブルー_ハイドロバリエル_AOE","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"ElementsL":[{"Name":"扇","type":4,"radius":50.0,"coneAngleMin":-60,"coneAngleMax":60,"color":4278190335,"fillIntensity":0.3,"thicc":3.0,"refActorNPCNameID":14369,"refActorRequireCast":true,"refActorCastId":[46547],"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"DistanceMax":13.2,"FillStep":4.0}]}
 ~Lv2~{"Name":"Hvy2S_ディープブルー_ハイドロバリエル_散開","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"DCond":5,"UseTriggers":true,"MinDistance":0.1,"MaxDistance":50.0,"UseDistanceLimit":true,"DistanceLimitType":1,"Triggers":[{"Type":2,"Duration":5.0,"Match":"MapEffect: 2, 1024, 2048","MatchDelay":5.0},{"Type":2,"Duration":5.0,"Match":"MapEffect: 4, 1024, 2048","MatchDelay":5.0}],"ElementsL":[{"Name":"サークル","type":1,"radius":5.0,"color":4278190335,"fillIntensity":0.3,"refActorRequireBuff":true,"refActorBuffId":[4975],"refActorComparisonType":1,"includeRotation":true,"FaceMe":true}]}
 ~Lv2~{"Name":"Hvy2S_ディープブルー_ハイドロバリエル_頭割","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Duration":5.0,"Match":"MapEffect: 2, 64, 128","MatchDelay":5.0},{"Type":2,"Duration":5.0,"Match":"MapEffect: 4, 64, 128","MatchDelay":5.0}],"ElementsL":[{"Name":"サークル","type":1,"radius":5.0,"color":4278190335,"Filled":false,"fillIntensity":0.3,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":2.0,"thicc":5.0,"overlayTextIntl":{"Jp":"頭割り"},"refActorPlaceholder":["<h1>","<h2>"],"refActorRequireBuff":true,"refActorBuffId":[4975],"refActorComparisonType":5,"includeRotation":true,"FaceMe":true}]}
