--- a/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級2層零式.md
+++ b/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級2層零式.md
@@ -30,6 +30,10 @@ splatoonのgithubの翻訳＋α<br>
 ・Hvy2S_エクストリームウェーブ_誘導ライン<br>
 追加<br>
 
+<span style="color: #FF0000;">2026/1/11/13:00<br></span>
+・Hvy2S_エクストリームウェーブ_誘導ライン<br>
+表示位置を調整<br>
+
 ## レイアウト
 ```
 ~Lv2~{"Name":"Hvy2S_レッドホット_フレイムフローター_テキスト","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"ElementsL":[{"Name":"1","type":1,"radius":0.0,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4290903808,"overlayVOffset":2.0,"overlayFScale":2.0,"thicc":0.0,"overlayText":"1","refActorRequireBuff":true,"refActorBuffId":[3004],"refActorComparisonType":1,"refActorType":1},{"Name":"2","type":1,"radius":0.0,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4294901986,"overlayVOffset":2.0,"overlayFScale":2.0,"thicc":0.0,"overlayText":"2","refActorRequireBuff":true,"refActorBuffId":[3005],"refActorComparisonType":1,"refActorType":1},{"Name":"3","type":1,"radius":0.0,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4290903808,"overlayVOffset":2.0,"overlayFScale":2.0,"thicc":0.0,"overlayText":"3","refActorRequireBuff":true,"refActorBuffId":[3006],"refActorComparisonType":1,"refActorType":1},{"Name":"4","type":1,"radius":0.0,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4294901986,"overlayVOffset":2.0,"overlayFScale":2.0,"thicc":0.0,"overlayText":"4","refActorRequireBuff":true,"refActorBuffId":[3451],"refActorComparisonType":1,"refActorType":1}]}
@@ -48,9 +52,9 @@ splatoonのgithubの翻訳＋α<br>
 ~Lv2~{"Name":"Hvy2S_ディープブルー_ハイドロバリエル_散開","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"DCond":5,"UseTriggers":true,"MinDistance":0.1,"MaxDistance":50.0,"UseDistanceLimit":true,"DistanceLimitType":1,"Triggers":[{"Type":2,"Duration":5.0,"Match":"MapEffect: 2, 1024, 2048","MatchDelay":5.0},{"Type":2,"Duration":5.0,"Match":"MapEffect: 4, 1024, 2048","MatchDelay":5.0}],"ElementsL":[{"Name":"サークル","type":1,"radius":5.0,"color":4278190335,"fillIntensity":0.3,"refActorRequireBuff":true,"refActorBuffId":[4975],"refActorComparisonType":1,"includeRotation":true,"FaceMe":true}]}
 ~Lv2~{"Name":"Hvy2S_ディープブルー_ハイドロバリエル_頭割","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Duration":5.0,"Match":"MapEffect: 2, 64, 128","MatchDelay":5.0},{"Type":2,"Duration":5.0,"Match":"MapEffect: 4, 64, 128","MatchDelay":5.0}],"ElementsL":[{"Name":"サークル","type":1,"radius":5.0,"color":4278190335,"Filled":false,"fillIntensity":0.3,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":2.0,"thicc":5.0,"overlayTextIntl":{"Jp":"頭割り"},"refActorPlaceholder":["<h1>","<h2>"],"refActorRequireBuff":true,"refActorBuffId":[4975],"refActorComparisonType":5,"includeRotation":true,"FaceMe":true}]}
 ~Lv2~{"Name":"Hvy2S_エクストリームウェーブ_AOE","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"ElementsL":[{"Name":"Orb","type":1,"radius":0.0,"color":3355639552,"fillIntensity":0.5,"refActorNPCNameID":14373,"refActorComparisonType":6,"includeHitbox":true,"onlyTargetable":true,"Conditional":true},{"Name":"Water tether","type":3,"refY":40.0,"radius":5.0,"color":3372218624,"fillIntensity":0.248,"refActorComparisonType":7,"includeRotation":true,"FaceMe":true,"refActorVFXPath":"vfx/lockon/eff/m0982trg_c0c.avfx","refActorVFXMax":15000,"refActorTether":true,"refActorTetherParam2":57,"refActorIsTetherSource":false,"refActorIsTetherLive":true,"refActorTetherConnectedWithPlayer":[],"faceplayer":"<tethered>","FaceInvert":true},{"Name":"Fire tether","type":3,"refY":40.0,"radius":5.0,"fillIntensity":0.248,"refActorComparisonType":7,"includeRotation":true,"FaceMe":true,"refActorVFXPath":"vfx/lockon/eff/m0982trg_c1c.avfx","refActorVFXMax":15000,"refActorTether":true,"refActorTetherParam2":57,"refActorIsTetherSource":false,"refActorIsTetherLive":true,"refActorTetherConnectedWithPlayer":[],"faceplayer":"<tethered>","FaceInvert":true},{"Name":"Water tether","type":3,"refY":40.0,"radius":5.0,"color":3372218624,"fillIntensity":0.248,"refActorComparisonType":7,"includeRotation":true,"FaceMe":true,"refActorVFXPath":"vfx/lockon/eff/m0982trg_c0c.avfx","refActorVFXMax":15000,"refActorTether":true,"refActorTetherParam2":17,"refActorIsTetherSource":false,"refActorIsTetherLive":true,"refActorTetherConnectedWithPlayer":[],"faceplayer":"<tethered>","FaceInvert":true},{"Name":"Fire tether","type":3,"refY":40.0,"radius":5.0,"fillIntensity":0.248,"refActorComparisonType":7,"includeRotation":true,"FaceMe":true,"refActorVFXPath":"vfx/lockon/eff/m0982trg_c1c.avfx","refActorVFXMax":15000,"refActorTether":true,"refActorTetherParam2":17,"refActorIsTetherSource":false,"refActorIsTetherLive":true,"refActorTetherConnectedWithPlayer":[],"faceplayer":"<tethered>","FaceInvert":true}]}
-~Lv2~{"Name":"Hvy2S_エクストリームウェーブ_誘導ライン","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"ElementsL":[{"Name":"トリガー","type":1,"refActorNPCNameID":14373,"refActorComparisonType":6,"onlyTargetable":true,"Conditional":true,"Nodraw":true},{"Name":"青線1","type":2,"refX":86.0,"refY":86.0,"refZ":1.1444092E-05,"offX":86.0,"offY":114.0,"radius":0.0,"color":4294903808,"fillIntensity":0.5,"thicc":10.0},{"Name":"青線2","type":2,"refX":114.0,"refY":86.0,"refZ":1.1444092E-05,"offX":114.0,"offY":114.0,"radius":0.0,"color":4294903808,"fillIntensity":0.5,"thicc":10.0},{"Name":"赤線","type":2,"refX":100.0,"refY":80.0,"refZ":1.1444092E-05,"offX":100.0,"offY":120.0,"radius":0.0,"color":4278190335,"fillIntensity":0.5,"thicc":10.0}]}
+~Lv2~{"Name":"Hvy2S_エクストリームウェーブ_誘導ライン","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"ElementsL":[{"Name":"トリガー","type":1,"refActorNPCNameID":14373,"refActorComparisonType":6,"onlyTargetable":true,"Conditional":true,"Nodraw":true},{"Name":"青線1","type":2,"refX":90.0,"refY":82.0,"refZ":1.1444092E-05,"offX":90.0,"offY":118.0,"radius":0.0,"color":4294903808,"fillIntensity":0.5,"thicc":10.0},{"Name":"青線2","type":2,"refX":110.0,"refY":82.0,"refZ":1.1444092E-05,"offX":110.0,"offY":118.0,"radius":0.0,"color":4294903808,"fillIntensity":0.5,"thicc":10.0},{"Name":"赤線","type":2,"refX":100.0,"refY":80.0,"refZ":1.1444092E-05,"offX":100.0,"offY":120.0,"radius":0.0,"color":4278190335,"fillIntensity":0.5,"thicc":10.0}]}
 ~Lv2~{"Name":"Hvy2S_レッドホッド_エクストリームウェーブ","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Duration":6.0,"Match":"vfx/lockon/eff/m0982trg_c1c.avfx spawned on me"}],"ElementsL":[{"Name":"Orb","type":1,"radius":0.0,"color":3355639552,"fillIntensity":0.5,"refActorNPCNameID":14373,"refActorComparisonType":6,"includeHitbox":true,"onlyTargetable":true,"Conditional":true},{"Name":"黒線","type":1,"radius":30.0,"color":4278190080,"Filled":false,"fillIntensity":0.3,"thicc":10.0,"refActorNPCNameID":14370,"refActorComparisonType":6,"includeRotation":true,"onlyVisible":true,"FaceMe":true},{"Name":"白線","type":1,"radius":30.0,"color":4294967295,"Filled":false,"fillIntensity":0.3,"thicc":5.0,"refActorNPCNameID":14370,"refActorComparisonType":6,"includeRotation":true,"onlyVisible":true,"FaceMe":true}]}
-~Lv2~{"Name":"Hvy2S_ディープブルー_エクストリームウェーブ","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Duration":6.0,"Match":"vfx/lockon/eff/m0982trg_c0c.avfx spawned on me"}],"ElementsL":[{"Name":"Orb","type":1,"radius":0.0,"color":3355639552,"fillIntensity":0.5,"refActorNPCNameID":14373,"refActorComparisonType":6,"includeHitbox":true,"onlyTargetable":true,"Conditional":true},{"Name":"黒線","type":1,"radius":30.0,"color":4278190080,"Filled":false,"fillIntensity":0.3,"thicc":10.0,"refActorNPCNameID":14369,"refActorComparisonType":6,"includeRotation":true,"onlyVisible":true,"FaceMe":true},{"Name":"白線","type":1,"radius":30.0,"color":4294967295,"Filled":false,"fillIntensity":0.3,"thicc":5.0,"refActorNPCNameID":14369,"refActorComparisonType":6,"includeRotation":true,"onlyVisible":true,"FaceMe":true}]}
+~Lv2~{"Name":"Hvy2S_ディープブルー_エクストリームウェーブ","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"UseTriggers":true,"Triggers":[{"Type":2,"Duration":6.0,"Match":"vfx/lockon/eff/m0982trg_c0c.avfx spawned on me"}],"ElementsL":[{"Name":"Orb","type":1,"radius":0.0,"color":3355639552,"fillIntensity":0.5,"refActorNPCNameID":14373,"refActorComparisonType":6,"includeHitbox":true,"onlyTargetable":true,"Conditional":true},{"Name":"黒線","type":1,"radius":30.0,"color":4278190080,"Filled":false,"fillIntensity":0.3,"thicc":10.0,"refActorNPCNameID":14369,"refActorComparisonType":6,"includeRotation":true,"onlyVisible":true,"FaceMe":true},{"Name":"白線","type":1,"radius":30.0,"color":4294967295,"Filled":false,"fillIntensity":0.3,"thicc":5.0,"refActorNPCNameID":14369,"refActorComparisonType":6,"includeRotation":true,"onlyVisible":true,"FaceMe":true}]}
 ~Lv2~{"Name":"Hvy2S_ディープブルー_シック・スウェル","InternationalName":{"En":"M10S Knockback AOE","Jp":"Hvy2S_ディープブルー_シック・スウェル","De":"M10S Knockback AOE","Fr":"M10S Knockback AOE"},"Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Duration":5.0,"Match":"(14369>46540)"}],"ElementsL":[{"Name":"前方直線","type":3,"refY":25.0,"offY":-25.0,"radius":7.5,"color":4278190335,"fillIntensity":0.3,"refActorModelID":4719,"refActorComparisonType":1,"includeRotation":true,"onlyUnTargetable":true,"onlyVisible":true,"DistanceSourceX":100.53685,"DistanceSourceY":100.05987,"DistanceSourceZ":9.536743E-07,"DistanceMax":1.0}]}
 ~Lv2~{"Name":"Hvy2S_エクストリームズ・エーテル_ミックスバースト","Group":"[7.4]アルカディアヘビー級2層零式","ZoneLockH":[1323],"ElementsL":[{"Name":"サークル","type":1,"radius":9.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14371,"refActorRequireCast":true,"refActorCastId":[46587],"refActorComparisonType":6,"includeRotation":true,"FaceMe":true}]}
 ```
