--- a/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級3層零式.md
+++ b/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級3層零式.md
@@ -11,8 +11,8 @@
 全体的な手直し<br>
 
 ・game8 ロール別散開位置<br>
-2層のConfigurationsの都合でgame8という名称で設定してありますが、現在の野良の主流(ぬけまる)で使用出来ます
-また、スクリプトもConfigurationsに対応させたので、スクリプトも一緒に設定させたい場合は
+2層のConfigurationsの都合でgame8という名称で設定してありますが、現在の野良の主流(ぬけまる)で使用出来ます<br>
+また、スクリプトもConfigurationsに対応させたので、スクリプトも一緒に設定させたい場合は１つ１つ面倒ですが全部設定をインポートしてください<br>
 
 ## レイアウト
 ```
