--- a/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級3層零式.md
+++ b/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級3層零式.md
@@ -13,6 +13,7 @@
 ・game8 ロール別散開位置<br>
 Configurationsの都合でgame8という名称で設定してありますが、現在の野良の主流(ぬけまる)で使用出来ます<br>
 また、スクリプトもConfigurationsに対応させたので、スクリプトも一緒に設定させたい場合は１つ１つ面倒ですが全部設定をインポートしてください<br>
+スクリプトのロール別Configurationsは各スクリプト設定の"Saved Configurations"タブにある"Paste from clipboard"ボタンでインポートできます<br>
 
 ## レイアウト
 ```
@@ -45,10 +46,8 @@ https://github.com/PunishXIV/Splatoon/raw/refs/heads/main/SplatoonScripts/Duties
 ```
 https://github.com/PunishXIV/Splatoon/raw/refs/heads/main/SplatoonScripts/Duties/Dawntrail/M11S%20Majestic%20Meteor.cs
 ```
-設定
-```
-{"List":[{"Name":"","Jobs":[],"Role":1000},{"Name":"","Jobs":[],"Role":2000},{"Name":"","Jobs":[],"Role":3000},{"Name":"","Jobs":[],"Role":3002},{"Name":"","Jobs":[],"Role":1001},{"Name":"","Jobs":[],"Role":2001},{"Name":"","Jobs":[],"Role":3001},{"Name":"","Jobs":[],"Role":3003}],"IsRole":true}
-```
+Priority Listは上から順にMTH1D1D2STH2D3D4と設定してください<br>
+後ほど画像追加します<br>
 ---
 ### Meteorain
 ```
