--- a/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級3層零式.md
+++ b/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級3層零式.md
@@ -21,6 +21,13 @@ Priority listの設定が間違って記載されていたのを修正<br>
 修正前:MTH1D1D2STH2D3D4<br>
 修正後:MTH1D1D3STH2D2D4<br>
 
+<span style="color: #FF0000;">2026/1/13/19:30<br></span>
+・Majestic Meteor<br>
+Priority listの設定を勘違いしてました。本当にすみません<br>
+修正前1:MTH1D1D2STH2D3D4<br>
+修正前2:MTH1D1D3STH2D2D4<br>
+修正後 :MTD3H1D1D4H2D2ST<br>
+
 ## レイアウト
 ```
 ~Lv2~{"Name":"Hvy3S_ザ・タイラント_ウェポンジェネレート・バスター_斧","Group":"[7.4]アルカディアヘビー級3層零式","ZoneLockH":[1325],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Duration":10.0,"Match":"(14305>46114)"}],"ElementsL":[{"Name":"タンク","type":1,"radius":6.0,"color":4278190335,"Filled":false,"fillIntensity":0.3,"thicc":5.0,"refActorPlaceholder":["<t1>"],"refActorComparisonType":5,"includeRotation":true,"FaceMe":true},{"Name":"ヒーラーDPS","type":1,"radius":5.0,"color":4278190335,"fillIntensity":0.3,"refActorPlaceholder":["<h1>","<h2>","<d1>","<d2>","<d3>","<d4>"],"refActorComparisonType":5,"includeRotation":true,"FaceMe":true}]}
@@ -52,7 +59,8 @@ https://github.com/PunishXIV/Splatoon/raw/refs/heads/main/SplatoonScripts/Duties
 ```
 https://github.com/PunishXIV/Splatoon/raw/refs/heads/main/SplatoonScripts/Duties/Dawntrail/M11S%20Majestic%20Meteor.cs
 ```
-Priority Listは上から順にMTH1D1D3STH2D2D4と設定してください<br>
+
+Priority Listは上から順にMTD3H1D1D4H2D2STと設定してください<br>
 後ほど画像追加します<br>
 ---
 ### Meteorain
