--- a/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級3層零式.md
+++ b/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級3層零式.md
@@ -68,7 +68,7 @@ https://github.com/PunishXIV/Splatoon/raw/refs/heads/main/SplatoonScripts/Duties
 ```
 https://github.com/PunishXIV/Splatoon/raw/refs/heads/main/SplatoonScripts/Duties/Dawntrail/M11S%20Majestic%20Meteor.cs
 ```
-<img width="426" height="327" alt="Image" src="https://github.com/user-attachments/assets/5d84f288-f8ce-4717-8533-f0f98e0c5766" />
+<img width="426" height="327" alt="Image" src="https://github.com/user-attachments/assets/5d84f288-f8ce-4717-8533-f0f98e0c5766" /><br>
 ---
 ### Meteorain
 2026/1/15時点でMTSTは正しく動作しなさそうです。<br>
