--- a/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級4層零式.md
+++ b/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級4層零式.md
@@ -53,3 +53,10 @@
 ~Lv2~{"Name":"Hvy4S2_人型分体_マイティマジック","Group":"[7.4]アルカディアヘビー級4層零式","ZoneLockH":[1327],"ElementsL":[{"Name":"テキスト","type":1,"radius":0.0,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4294902272,"overlayVOffset":2.0,"overlayFScale":2.0,"thicc":0.0,"overlayTextIntl":{"Jp":"マイティマジック"},"refActorNPCNameID":14380,"refActorRequireCast":true,"refActorCastId":[46303],"refActorComparisonType":6}]}
 ~Lv2~{"Name":"Hvy4S2_人型分体_パワーガッシャー","Group":"[7.4]アルカディアヘビー級4層零式","ZoneLockH":[1327],"ElementsL":[{"Name":"扇1","type":4,"radius":30.0,"coneAngleMin":-45,"coneAngleMax":45,"color":4278190335,"fillIntensity":0.3,"thicc":3.0,"refActorNPCNameID":14380,"refActorRequireCast":true,"refActorCastId":[46363],"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"onlyVisible":true,"DistanceMax":13.2,"FillStep":4.0},{"Name":"扇2","type":4,"radius":30.0,"coneAngleMin":-45,"coneAngleMax":45,"color":4278190335,"fillIntensity":0.3,"thicc":3.0,"refActorNPCNameID":14380,"refActorRequireCast":true,"refActorCastId":[46363],"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"onlyVisible":true,"AdditionalRotation":3.1415927,"DistanceMax":13.2,"FillStep":4.0}]}
 ```
+
+## スクリプト
+###Mortal Slayer
+リーサルスカージ
+```
+https://github.com/PunishXIV/Splatoon/raw/refs/heads/main/SplatoonScripts/Duties/Dawntrail/M12S%20P1%20Mortal%20Slayer.cs
+```
