--- a/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級4層零式.md
+++ b/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級4層零式.md
@@ -56,15 +56,15 @@
 
 ## スクリプト
 ### Mortal Slayer
-リーサルスカージ
+リーサルスカージ<br>
 ```
 https://github.com/PunishXIV/Splatoon/raw/refs/heads/main/SplatoonScripts/Duties/Dawntrail/M12S%20P1%20Mortal%20Slayer.cs
 ```
 <img width="407" height="378" alt="Image" src="https://github.com/user-attachments/assets/a05baf69-b0b6-4c2f-a272-db466aa46c51" /><br>
 
 ### Snake
-細胞付着・中期
-設定不要
+細胞付着・中期<br>
+設定不要<br>
 ```
 https://github.com/PunishXIV/Splatoon/raw/refs/heads/main/SplatoonScripts/Duties/Dawntrail/M12S%20P1%20Snake.cs
 ```
