--- a/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級4層零式.md
+++ b/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級4層零式.md
@@ -29,6 +29,9 @@
 <span style="color: #FF0000;">2026/1/17/9:00<br></span>
 ・前半の全体的な修正・追加<br>
 
+<span style="color: #FF0000;">2026/1/17/10:00<br></span>
+前半のスクリプト解説を追記<br>
+
 ## レイアウト
 ```
 ~Lv2~{"Name":"Hvy4S1_リンドブルム_ラヴェナスリーチ_通常","Group":"[7.4]アルカディアヘビー級4層零式","ZoneLockH":[1327],"ElementsL":[{"Name":"トリガー","type":1,"refActorRequireBuff":true,"refActorBuffId":[4763],"refActorType":1,"Conditional":true,"ConditionalInvert":true,"Nodraw":true},{"Name":"扇","type":4,"radius":40.0,"coneAngleMin":-60,"coneAngleMax":60,"color":4278190335,"fillIntensity":0.3,"thicc":3.0,"refActorNPCNameID":14378,"refActorRequireCast":true,"refActorCastId":[46237],"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"DistanceMax":13.2,"FillStep":4.0}]}
