--- a/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級4層零式.md
+++ b/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級4層零式.md
@@ -34,7 +34,7 @@
 
 <span style="color: #FF0000;">2026/1/17/14:50<br></span>
 前半のロール別散開位置を追加<br>
-3層と同じくgame8と書いてありますがぬけまる準拠です。<br>
+3層と同じくgame8と書いてありますがぬけまる準拠です<br>
 
 ## レイアウト
 ```
@@ -74,6 +74,13 @@ https://github.com/PunishXIV/Splatoon/raw/refs/heads/main/SplatoonScripts/Duties
 設定不要<br>
 ```
 https://github.com/PunishXIV/Splatoon/raw/refs/heads/main/SplatoonScripts/Duties/Dawntrail/M12S%20P1%20Snake.cs
+```
+
+### Bloodshed
+前半最終ギミックの半面・ノックバックを表示<br>
+設定不要<br>
+```
+https://github.com/PunishXIV/Splatoon/raw/refs/heads/main/SplatoonScripts/Duties/Dawntrail/M12S%20Bloodshed.cs
 ```
 
 ## game8 ロール別散開位置
