--- a/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級4層零式.md
+++ b/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級4層零式.md
@@ -1,5 +1,6 @@
 ﻿## 変更履歴
-
+<details>
+<summary>過去</summary>
 <span style="color: #FF0000;">2026/1/9/11:00<br></span>
 細胞付着・前期だけ制作<br>
 
@@ -25,6 +26,7 @@
 ・Hvy4S2_リンドブルム_ダブルソバット3<br>
 ・Hvy4S2_人型分体_ウィングドスカージ<br>
 追加<br>
+</details>
 
 <span style="color: #FF0000;">2026/1/17/9:00<br></span>
 ・前半の全体的な修正・追加<br>
