Update [7.4]アルカディアヘビー級1層零式 .md

--- a/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級1層零式 .md
+++ b/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級1層零式 .md
@@ -10,6 +10,9 @@
 <span style="color: #FF0000;">2026/1/18/13:20<br></span>
 全体的な修正<br>
 
+<span style="color: #FF0000;">2026/1/18/13:50<br></span>
+スクリプト解説を追記<br>
+
 ## レイアウト
 ```
 ~Lv2~{"Name":"Hvy1S_ヴァンプ・ファタール_ハードコア小","Group":"[7.4]アルカディアヘビー級1層零式","ZoneLockH":[1321],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Duration":10.0,"Match":"(14300>45951)"}],"ElementsL":[{"Name":"サークル","type":1,"radius":6.0,"color":4278190335,"fillIntensity":0.3,"refActorComparisonType":7,"includeRotation":true,"FaceMe":true,"refActorVFXPath":"vfx/lockon/eff/tank_lockonae_0m_5s_01t.avfx","refActorVFXMax":5000}]}
@@ -32,3 +35,20 @@
 ~Lv2~{"Name":"Hvy1S_トーチャー・ファタール_突き出る","Group":"[7.4]アルカディアヘビー級1層零式","ZoneLockH":[1321],"ElementsL":[{"Name":"前方直線1","type":3,"refY":50.0,"radius":2.51,"color":4278190335,"fillIntensity":0.5,"refActorNPCNameID":14301,"refActorRequireCast":true,"refActorCastId":[45928,45929,45930],"refActorUseCastTime":true,"refActorCastTimeMin":2.0,"refActorCastTimeMax":5.0,"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0,"Conditional":true,"ConditionalInvert":true},{"Name":"前方直線2","type":3,"refY":50.0,"radius":2.51,"color":4278190335,"fillIntensity":0.5,"refActorNPCNameID":14301,"refActorRequireCast":true,"refActorCastId":[45928,45929,45930],"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0}]}
 ```
 
+## スクリプト
+### Hell in a Cell
+ヘル・イン・ア・セル<br>
+自分の担当位置を表示<br>
+
+```
+https://github.com/PunishXIV/Splatoon/raw/refs/heads/main/SplatoonScripts/Duties/Dawntrail/M9S%20Hell%20In%20a%20Cell.cs
+```
+<img width="454" height="514" alt="Image" src="https://github.com/user-attachments/assets/b7048c86-d47f-4435-9508-3781999642eb" /><br>
+
+
+### Vamp Stomp
+コウモリの爆発範囲を表示<br>
+設定不要<br>
+```
+https://github.com/PunishXIV/Splatoon/raw/refs/heads/main/SplatoonScripts/Duties/Dawntrail/M9S%20Vamp%20Stomp.cs
+```
